syntax = "proto3";
package networkApi;
option go_package = "github.com/mrNobody95/Gate/services/ganjeh/api";
import "api/src/misc.proto";

service VariableService {
  rpc Set(SetVariableRequest) returns (Variable);
  rpc Get(GetVariableRequest) returns (Variable);
  rpc List(GetVariablesRequest) returns (Variables);
  rpc Delete(DeleteVariableRequest) returns (api.Void);
}

message Variable {
  // @inject_tag: json:"key"
  string key = 1;
  // @inject_tag: json:"value"
  string Value = 2;
  // @inject_tag: json:"namespace"
  string Namespace = 3;
  // @inject_tag: json:"updated_at"
  int64 UpdatedAt = 4;
}

message Variables {
  // @inject_tag: json:"variables"
  repeated Variable Variables = 1;
}

message SetVariableRequest {
  // @inject_tag: json:"key"
  string key = 1;
  // @inject_tag: json:"value"
  string Value = 2;
  // @inject_tag: json:"namespace"
  string Namespace = 3;
}

message GetVariableRequest {
  // @inject_tag: json:"key"
  string key = 1;
  // @inject_tag: json:"namespace"
  string Namespace = 2;

}

message DeleteVariableRequest {
  // @inject_tag: json:"key"
  string key = 1;
  // @inject_tag: json:"namespace"
  string Namespace = 2;

}

message GetVariablesRequest {
  // @inject_tag: json:"namespace"
  string Namespace = 1;

}